syntax = "proto3";

option go_package = "github.com/KassymbekovTimur/UTTMS/statistics";
package stats;

service Statistics {
  rpc GetUserOrdersStatistics (UserOrderStatisticsRequest) returns (UserOrderStatisticsResponse);
  rpc GetUserStatistics       (UserStatisticsRequest)       returns (UserStatisticsResponse);
}

message UserOrderStatisticsRequest {
  string user_id = 1;
}

message UserOrderStatisticsResponse {
  int32 total_orders = 1;
  map<string, int32> orders_by_hour = 2; // e.g. "14": 5
}

message UserStatisticsRequest {
  string user_id = 1;
}

message UserStatisticsResponse {
  int32 total_users = 1;
  int32 total_registered = 2;
}
